Layout Inicial do Rodape e Listas de Usuários e de Produtos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container">
-<div class="row">
-    <div class="col">
+<div class="row" style="height: 600px;" >
+    <div class="col" style="margin-top: 50px;">
         <router-outlet></router-outlet>
     </div>
 </div>
