--- a/src/app/pages/produtos/listagem-produtos/listagem-produtos.component.html
+++ b/src/app/pages/produtos/listagem-produtos/listagem-produtos.component.html
@@ -1,1 +1,37 @@
-<p>listagem-produtos works!</p>
+<table class="table table-success table-striped">
+    <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Produto</th>
+          <th scope="col">Categoria</th>
+          <th scope="col">Preço</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Pipa</td>
+          <td>Brinquedo</td>
+          <td>R$ 33,50</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Lanterna</td>
+          <td>Ferramenta</td>
+          <td>R$ 27,90</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Sofá</td>
+          <td>Móvel</td>
+          <td>R$ 1.500,00</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Edifício</td>
+            <td>Imóvel</td>
+            <td>R$ 15.000.000,00</td>
+          </tr>
+      </tbody>
+  </table>
+
