--- a/src/app/pages/usuarios/listagem-usuarios/listagem-usuarios.component.html
+++ b/src/app/pages/usuarios/listagem-usuarios/listagem-usuarios.component.html
@@ -1,1 +1,36 @@
-<p>listagem-usuarios works!</p>
+<table class="table table-primary table-striped">
+    <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Nome</th>
+          <th scope="col">Sobrenome</th>
+          <th scope="col">Email</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Abel</td>
+          <td>Lebel</td>
+          <td>abel.lebel&#64;email.com</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Juba</td>
+          <td>França</td>
+          <td>juba.franca&#64;email.com</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Loro</td>
+          <td>José</td>
+          <td>loro.jose&#64;email.com</td>
+        </tr>
+        <tr>
+            <th scope="row">4</th>
+            <td>Stepan</td>
+            <td>Nercesian</td>
+            <td>stepan.nercesian&#64;email.com</td>
+          </tr>
+      </tbody>
+  </table>
