--- a/src/app/pages/usuarios/listagem-usuarios/listagem-usuarios.component.html
+++ b/src/app/pages/usuarios/listagem-usuarios/listagem-usuarios.component.html
@@ -1,1 +1,24 @@
-<p>listagem-usuarios works!</p>
+<my-title title="Usuários"></my-title>
+<hr>
+<table class="table">
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Idade</th>
+        <th scope="col">Status</th>
+        <th >Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Abel Lebel Muarami Cintra</td>
+        <td>75</td>
+        <td>Ativo</td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+  <button type="button" class="btn btn-dark">Cadastrar</button>
+    
