--- a/src/app/pages/usuarios/cadastro-usuarios/cadastro-usuarios.component.html
+++ b/src/app/pages/usuarios/cadastro-usuarios/cadastro-usuarios.component.html
@@ -1,6 +1,6 @@
 <my-title title="Cadastrar Usuário"></my-title>
 <hr>
-<form [formGroup]="usuarioForm">
+<form [formGroup]="usuarioForm" (submit)="cadastrarUsuario()">
     <div class="row">
         <div class="col">
             <div class="mb-3">
@@ -17,5 +17,5 @@
              </div>
         </div>
     </div>
-    <button type="button" class="btn btn-primary" [disabled]="usuarioForm.invalid">Cadastrar</button>
+    <button type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">Cadastrar</button>
 </form>
