--- a/src/app/pages/usuarios/cadastro-usuarios/cadastro-usuarios.component.html
+++ b/src/app/pages/usuarios/cadastro-usuarios/cadastro-usuarios.component.html
@@ -1,4 +1,10 @@
-<my-title title="Cadastrar Usuário"></my-title>
+@if (usuarioForm.get('id')) {
+    <my-title title="Cadastrar Usuário"></my-title>
+}
+@else {
+    <my-title title="Editar Usuário"></my-title>
+}
+
 <hr>
 <form [formGroup]="usuarioForm" (submit)="cadastrarUsuario()">
     <div class="row">
@@ -7,6 +13,9 @@
                 <label for="nome" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="nome"
                     formControlName="nome">
+                @if (usuarioForm.get('nome')?.errors && usuarioForm.get('nome')?.touched) {
+                    <div class="form-text text-danger">Campo Obrigatório.</div>
+                }
              </div>
         </div>
         <div class="col">
@@ -17,5 +26,11 @@
              </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">Cadastrar</button>
+    @if (id==0) 
+    {
+        <button type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">Cadastrar</button>
+    }
+    @else {
+        <button type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">Alterar</button>
+     }
 </form>
