--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container-fluid" style="height: 600px;">
 <div class="row">
     <div class="col">
         <router-outlet></router-outlet>
