--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -25,7 +25,7 @@
           </ul>
         </div>
         <div class="col-6 col-lg-2 mb-3">
-          <h5>Projects</h5>
+          <h5>Projetos</h5>
           <ul class="list-unstyled">
             <li class="mb-2"><a href=".">Projeto 1</a></li>
             <li class="mb-2"><a href=".">Projeto 2</a></li>
