--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="row">
+<div class="col">
+    <img src="../../../assets/Angular-AI2.jpg" 
+            alt="Angular"  width="100%" 
+            height="650px" style="display: block; margin-left: auto; 
+            margin-right: auto; margin-top: auto; margin-bottom: auto; opacity: 0.5">
+</div>
+
+</div>
+
