--- a/src/app/pages/usuarios/cadastro-usuarios/cadastro-usuarios.component.html
+++ b/src/app/pages/usuarios/cadastro-usuarios/cadastro-usuarios.component.html
@@ -33,5 +33,5 @@
     @else {
         <button type="submit" class="btn btn-primary" [disabled]="usuarioForm.invalid">Cadastrar</button>
      }
-     <a class="btn btn-dark" routerLink="/usuarios" style="margin-left: 10px;">Voltar</a>
+     <a class="btn btn-secondary" routerLink="/usuarios" style="margin-left: 10px;">Voltar</a>
 </form>
