--- a/src/app/pages/usuarios/listagem-usuarios/listagem-usuarios.component.html
+++ b/src/app/pages/usuarios/listagem-usuarios/listagem-usuarios.component.html
@@ -1,7 +1,7 @@
 <my-title title="Usuários"></my-title>
 <hr>
 <table class="table">
-    <thead class="table-dark">
+    <thead class="table-secondary">
       <tr>
         <th scope="col">Id</th>
         <th scope="col">Nome</th>
@@ -18,7 +18,7 @@
           <td>{{usuario.idade}}</td>
           <td>{{usuario.ativo ? "Ativo" : "Desativado"}}</td>
           <td>
-            <button type="button" class="btn btn-danger btn-sm" (click)="removerUsuario(usuario.id || 0)">Remover</button>
+            <button type="button" class="btn btn-warning btn-sm" (click)="removerUsuario(usuario.id || 0)">Remover</button>
             <a [routerLink]="'/usuarios/editar/' + usuario.id"  
                 class="btn btn-secondary btn-sm ms-2">Editar</a>
           </td>
@@ -26,5 +26,5 @@
       }
     </tbody>
   </table>
-  <a class="btn btn-dark" routerLink="/usuarios/cadastrar">Cadastrar</a>
+  <a class="btn btn-secondary" routerLink="/usuarios/cadastrar">Cadastrar</a>
     
